uses CMake supplemented with the BLT macro library is the only supported build
system.  (This change effective as of v. 3.15.0)

2) NEW for v. 4.0.3 The number of threads launched by dimensional RAJA
policies (Policy1D, Policy2D, Policy3D) for CUDA kernels in
tbox::ExecutionPolicy have been set to a fixed value of 256,
which is the product of the tile count in each dimensional direction.

*****************************************************************************

-----------------------------------------------------------------------------
                Details about what's new
-----------------------------------------------------------------------------

1) In v4.0.0 SAMRAI is introducing new features to support running applications
on GPU architectures, using capabilities provided by the Umpire and RAJA
libraries.

Umpire:  https://github.com/LLNL/Umpire
RAJA:  https://github.com/LLNL/RAJA

Umpire provides tools for memory management on multiple-memory architectures,
such as GPU architectures that use storage in both host and device memory
spaces.

RAJA provides portable abstractions for loop execution, enabling the use of
a single code base for multiple modes of running loop kernels on different
architectures, ranging from ordinary serial loop execution on a CPU, to
shared-memory multi-threading, to threaded CUDA kernel launches on a GPU.

The key feature used from Umpire is the Allocator, an object that controls
all aspects of memory allocation and will determine the location of
the allocation in architectures with multiple memory spaces.  The patch data
objects in the pdat directory have new overloaded constructors that take
an umpire::Allocator as an argument.  Additionally a new singleton class
tbox::AllocatorDatabase manages certain Allocators that are held
by SAMRAI and used to control allocations that occur internally during
SAMRAI operations.  Application codes can access these Allocators from the